-- Database Schema optimized for PostgreSQL (Supabase) based on ERD v1
-- Reordered for Foreign Key Dependency Compatibility

-- 1. INDEPENDENT TABLES (No foreign keys)
CREATE TABLE IF NOT EXISTS BARANGAY_INFO (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL UNIQUE,
    map_geo_json JSONB,
    location_data JSONB,
    mission TEXT,
    vision TEXT,
    history TEXT,
    cultural_assets TEXT,
    traditions TEXT,
    local_practices TEXT,
    unique_features TEXT,
    user_id INTEGER,
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
);

-- 2. TABLES WITH DEPENDENCIES

-- "USER" depends only on BARANGAY_INFO. Quoted because it's a reserved keyword.
CREATE TABLE IF NOT EXISTS "USER" (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    username VARCHAR(80) NOT NULL UNIQUE,
    email VARCHAR(120) NOT NULL UNIQUE,
    password VARCHAR(255) NOT NULL,
    role VARCHAR(20) DEFAULT 'user',
    barangay_id INTEGER,
    is_approved BOOLEAN DEFAULT FALSE,
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (barangay_id) REFERENCES BARANGAY_INFO(id)
);
CREATE INDEX IF NOT EXISTS idx_user_barangay ON "USER"(barangay_id);

-- Depends on "USER"
CREATE TABLE IF NOT EXISTS PASSWORD_RESET_TOKEN (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER NOT NULL,
    token VARCHAR(128) NOT NULL UNIQUE,
    expires_at TIMESTAMP WITH TIME ZONE NOT NULL,
    used BOOLEAN NOT NULL DEFAULT FALSE,
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (user_id) REFERENCES "USER"(id)
);
CREATE INDEX IF NOT EXISTS idx_reset_token_user ON PASSWORD_RESET_TOKEN(user_id);

-- Depends on "USER"
CREATE TABLE IF NOT EXISTS NEWSLETTER_SUBSCRIBER (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email VARCHAR(120) NOT NULL UNIQUE,
    is_active BOOLEAN DEFAULT TRUE,
    user_id INTEGER,
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (user_id) REFERENCES "USER"(id) ON DELETE SET NULL
);
CREATE INDEX IF NOT EXISTS idx_newsletter_subscriber_user ON NEWSLETTER_SUBSCRIBER(user_id);

CREATE TABLE IF NOT EXISTS NEWSLETTER_HISTORY (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    subject VARCHAR(200) NOT NULL,
    content TEXT NOT NULL,
    recipient_count INTEGER DEFAULT 0,
    sender_id INTEGER,
    sent_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (sender_id) REFERENCES "USER"(id) ON DELETE SET NULL
);
CREATE INDEX IF NOT EXISTS idx_newsletter_history_sender ON NEWSLETTER_HISTORY(sender_id);

-- Depends on "USER" and BARANGAY_INFO
CREATE TABLE IF NOT EXISTS HERITAGE_PROFILE (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    asset_type VARCHAR(50) NOT NULL,
    form_control_number VARCHAR(100),
    form_data JSONB,
    name_of_asset VARCHAR(200),
    common_name VARCHAR(200),
    barangay_id INTEGER,
    location_details TEXT,
    contact_person VARCHAR(200),
    contact_number VARCHAR(50),
    ownership_type VARCHAR(50),
    owner_administrator VARCHAR(200),
    usage_status VARCHAR(50),
    latitude DOUBLE PRECISION,
    longitude DOUBLE PRECISION,
    significance TEXT,
    conservation_status TEXT,
    mapper_name VARCHAR(200),
    date_profiled DATE,
    status VARCHAR(20) DEFAULT 'pending',
    user_id INTEGER,
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (barangay_id) REFERENCES BARANGAY_INFO(id),
    FOREIGN KEY (user_id) REFERENCES "USER"(id)
);
CREATE INDEX IF NOT EXISTS idx_heritage_profile_status ON HERITAGE_PROFILE(status);
CREATE INDEX IF NOT EXISTS idx_heritage_profile_type ON HERITAGE_PROFILE(asset_type);
CREATE INDEX IF NOT EXISTS idx_heritage_profile_barangay ON HERITAGE_PROFILE(barangay_id);
CREATE INDEX IF NOT EXISTS idx_heritage_profile_user ON HERITAGE_PROFILE(user_id);

-- Depends on BARANGAY_INFO, HERITAGE_PROFILE, and "USER"
CREATE TABLE IF NOT EXISTS ATTRACTION (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(200) NOT NULL,
    description TEXT,
    category VARCHAR(50),
    latitude DOUBLE PRECISION NOT NULL,
    longitude DOUBLE PRECISION NOT NULL,
    image_url VARCHAR(500),
    barangay_id INTEGER,
    heritage_profile_id INTEGER,
    status VARCHAR(20) DEFAULT 'pending',
    is_featured BOOLEAN DEFAULT FALSE,
    user_id INTEGER,
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (barangay_id) REFERENCES BARANGAY_INFO(id),
    FOREIGN KEY (heritage_profile_id) REFERENCES HERITAGE_PROFILE(id),
    FOREIGN KEY (user_id) REFERENCES "USER"(id)
);
CREATE INDEX IF NOT EXISTS idx_attraction_status ON ATTRACTION(status);
CREATE INDEX IF NOT EXISTS idx_attraction_category ON ATTRACTION(category);
CREATE INDEX IF NOT EXISTS idx_attraction_name ON ATTRACTION(name);
CREATE INDEX IF NOT EXISTS idx_attraction_barangay ON ATTRACTION(barangay_id);

-- Depends on BARANGAY_INFO and "USER"
CREATE TABLE IF NOT EXISTS EVENT (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(200) NOT NULL,
    description TEXT,
    date TIMESTAMP WITH TIME ZONE NOT NULL,
    location VARCHAR(255),
    category VARCHAR(50),
    image_url VARCHAR(500),
    latitude DOUBLE PRECISION,
    longitude DOUBLE PRECISION,
    barangay_id INTEGER,
    status VARCHAR(20) DEFAULT 'pending',
    user_id INTEGER,
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (barangay_id) REFERENCES BARANGAY_INFO(id),
    FOREIGN KEY (user_id) REFERENCES "USER"(id)
);
CREATE INDEX IF NOT EXISTS idx_event_barangay ON EVENT(barangay_id);

-- Depends on "USER"
CREATE TABLE IF NOT EXISTS GALLERY_ITEM (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    type VARCHAR(20) NOT NULL,
    url VARCHAR(500) NOT NULL,
    caption TEXT,
    user_id INTEGER,
    status VARCHAR(20) DEFAULT 'pending',
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (user_id) REFERENCES "USER"(id)
);

CREATE TABLE IF NOT EXISTS ANALYTICS_PAGE_VIEW (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    page_url VARCHAR(500),
    view_type VARCHAR(50),
    item_id INTEGER,
    page_name VARCHAR(100),
    user_id INTEGER,
    timestamp TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    session_id VARCHAR(100),
    ip_address VARCHAR(45),
    device_info TEXT
);

CREATE TABLE IF NOT EXISTS DATABASE_AUDIT_LOG (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER,
    action VARCHAR(50) NOT NULL,
    table_name VARCHAR(100) NOT NULL,
    record_id INTEGER,
    ip_address VARCHAR(45),
    user_agent VARCHAR(500),
    query_summary VARCHAR(500),
    status VARCHAR(20) DEFAULT 'success',
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (user_id) REFERENCES "USER"(id)
);

-- Depends on "USER" and ATTRACTION
CREATE TABLE IF NOT EXISTS USER_FAVORITE_ATTRACTION (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER,
    attraction_id INTEGER,
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (user_id) REFERENCES "USER"(id),
    FOREIGN KEY (attraction_id) REFERENCES ATTRACTION(id)
);

-- Depends on "USER" and EVENT
CREATE TABLE IF NOT EXISTS USER_EVENT_INTEREST (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER,
    event_id INTEGER,
    status VARCHAR(20),
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (user_id) REFERENCES "USER"(id),
    FOREIGN KEY (event_id) REFERENCES EVENT(id)
);

-- Depends on "USER" and ATTRACTION
CREATE TABLE IF NOT EXISTS ATTRACTION_REVIEW (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER,
    attraction_id INTEGER,
    rating INTEGER,
    comment TEXT,
    status VARCHAR(20) DEFAULT 'pending',
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (user_id) REFERENCES "USER"(id),
    FOREIGN KEY (attraction_id) REFERENCES ATTRACTION(id)
);

-- 3. ANNOUNCEMENTS MODULE TABLES
CREATE TABLE IF NOT EXISTS ANNOUNCEMENT (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    title VARCHAR(200) NOT NULL,
    content TEXT NOT NULL,
    image_url VARCHAR(500),
    is_active BOOLEAN DEFAULT TRUE,
    user_id INTEGER,
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (user_id) REFERENCES "USER"(id) ON DELETE SET NULL
);

-- 4. BUSINESS PORTAL TABLES (Establishments, Rooms, Menu Items, Reviews)
CREATE TABLE IF NOT EXISTS ESTABLISHMENT (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(200) NOT NULL,
    type VARCHAR(30) NOT NULL,
    description TEXT,
    address VARCHAR(500),
    latitude DOUBLE PRECISION NOT NULL,
    longitude DOUBLE PRECISION NOT NULL,
    barangay_id INTEGER,
    contact_number VARCHAR(50),
    email VARCHAR(120),
    website VARCHAR(300),
    operating_hours JSONB,
    price_range VARCHAR(20),
    amenities JSONB,
    cover_image_url VARCHAR(500),
    logo_url VARCHAR(500),
    owner_id INTEGER NOT NULL,
    status VARCHAR(20) DEFAULT 'pending',
    is_featured BOOLEAN DEFAULT FALSE,
    rating_avg DOUBLE PRECISION DEFAULT 0,
    review_count INTEGER DEFAULT 0,
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (barangay_id) REFERENCES BARANGAY_INFO(id),
    FOREIGN KEY (owner_id) REFERENCES "USER"(id)
);
CREATE INDEX IF NOT EXISTS idx_establishment_type ON ESTABLISHMENT(type);
CREATE INDEX IF NOT EXISTS idx_establishment_status ON ESTABLISHMENT(status);
CREATE INDEX IF NOT EXISTS idx_establishment_owner ON ESTABLISHMENT(owner_id);
CREATE INDEX IF NOT EXISTS idx_establishment_coords ON ESTABLISHMENT(latitude, longitude);

CREATE TABLE IF NOT EXISTS ESTABLISHMENT_ROOM (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    establishment_id INTEGER NOT NULL,
    name VARCHAR(100) NOT NULL,
    description TEXT,
    price_per_night DECIMAL(10,2),
    capacity INTEGER DEFAULT 2,
    amenities JSONB,
    image_urls JSONB,
    is_available BOOLEAN DEFAULT TRUE,
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (establishment_id) REFERENCES ESTABLISHMENT(id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS ESTABLISHMENT_MENU_ITEM (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    establishment_id INTEGER NOT NULL,
    name VARCHAR(200) NOT NULL,
    description TEXT,
    price DECIMAL(10,2),
    category VARCHAR(50),
    image_url VARCHAR(500),
    is_available BOOLEAN DEFAULT TRUE,
    is_bestseller BOOLEAN DEFAULT FALSE,
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (establishment_id) REFERENCES ESTABLISHMENT(id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS ESTABLISHMENT_REVIEW (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER NOT NULL,
    establishment_id INTEGER NOT NULL,
    rating INTEGER NOT NULL,
    comment TEXT,
    status VARCHAR(20) DEFAULT 'pending',
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (user_id) REFERENCES "USER"(id),
    FOREIGN KEY (establishment_id) REFERENCES ESTABLISHMENT(id) ON DELETE CASCADE,
    CONSTRAINT chk_establishment_rating CHECK (rating >= 1 AND rating <= 5)
);

-- 5. BOOKING MODULE TABLES
CREATE TABLE IF NOT EXISTS BOOKABLE_ASSET (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    establishment_id INTEGER NOT NULL,
    asset_name VARCHAR(100) NOT NULL,
    capacity INTEGER DEFAULT 1,
    is_active BOOLEAN DEFAULT TRUE,
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (establishment_id) REFERENCES ESTABLISHMENT(id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS BOOKING_SLOT (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    asset_id INTEGER NOT NULL,
    slot_start TIMESTAMP WITH TIME ZONE NOT NULL,
    slot_end TIMESTAMP WITH TIME ZONE NOT NULL,
    is_booked BOOLEAN DEFAULT FALSE,
    FOREIGN KEY (asset_id) REFERENCES BOOKABLE_ASSET(id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS RESERVATION (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER NOT NULL,
    slot_id INTEGER NOT NULL,
    party_size INTEGER DEFAULT 1,
    status VARCHAR(20) DEFAULT 'pending',
    created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (user_id) REFERENCES "USER"(id),
    FOREIGN KEY (slot_id) REFERENCES BOOKING_SLOT(id)
);

-- 6. GAMIFICATION PASSPORT MODULE TABLES
CREATE TABLE IF NOT EXISTS ACHIEVEMENT_BADGE (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    title VARCHAR(100) NOT NULL,
    description TEXT,
    points_awarded INTEGER DEFAULT 10,
    badge_icon_url VARCHAR(500)
);

CREATE TABLE IF NOT EXISTS USER_PASSPORT (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER NOT NULL UNIQUE,
    total_points INTEGER DEFAULT 0,
    unlocked_badges_count INTEGER DEFAULT 0,
    updated_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (user_id) REFERENCES "USER"(id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS TOURIST_CHECK_IN (
    id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER NOT NULL,
    attraction_id INTEGER NOT NULL,
    verified_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (user_id) REFERENCES "USER"(id) ON DELETE CASCADE,
    FOREIGN KEY (attraction_id) REFERENCES ATTRACTION(id) ON DELETE CASCADE
);